--------------
Version 0.51b:
--------------

  - afl-as search order changed to avoid the problem with older copies;
    this also means that I can remove the Makefile check for that.

--------------
Version 0.50b:
--------------

  - Additional improvements to the installation script. Patch by Padraig Brady.

  - Various documentation improvements, especially around perf_tips.txt;
    based on the feedback from Alexander Cherepanov.

  - Added AFL_INST_RATIO to afl-as. The only case where this comes handy is
    ffmpeg, at least as far as I can tell.

  - Added documentation for all environmental variables (env_variables.txt).

  - Visual warning for excessive or insufficient bitmap density.

  - -O3 is now added by default; use AFL_DONT_OPTIMIZE if you don't like that.

--------------
Version 0.49b:
--------------

  - More typo fixes (thanks to Jakub Wilk).

  - Support for clang!

  - AFL_HARDEN doesn't include ASAN by default anymore. Use AFL_USE_ASAN if
    needed. The reasons for this are in notes_for_asan.txt.

  - Switched from configure auto-detection to isatty() to keep afl-as and
    afl-gcc quiet.

  - Improved installation process to properly create symlinks, rather than
    copies of binaries (grr, /usr/bin/install).

--------------
Version 0.48b:
--------------

  - ASAN_OPTIONS=abort_on_error=1 is now force-set. Reported by Hanno Boeck.

  - Makefile mkdir improvements, as suggested by Hanno Boeck.

  - Properly save r8-r11 registers in the x86 setup code (this could cause rare
    problems running *without* instrumentation when the first function called
    in a particular .o file has 5+ parameters). No impact on code running under
    afl-fuzz or afl-showmap. Reported by Padraig Brady.

--------------
Version 0.47b:
--------------

  - Another minor fix for parallel builds of afl, suggested by
    Richard W. M. Jones.

  - Support for suffixes for -m.

  - Documentation updates, notes_for_asan.txt. Based on feedback from